--- a/compose.yaml
+++ b/compose.yaml
@@ -2,6 +2,7 @@ volumes:
   nginx_data:
   nginx_letsencrypt:
 
+
 services:
   nginx-proxy-manager:
     image: jc21/nginx-proxy-manager:latest
@@ -12,3 +13,7 @@ services:
     volumes:
       - nginx_data:/data
       - nginx_letsencrypt:/etc/letsencrypt
+
+networks:
+  nginx:
+    external: true
